--- a/index.html
+++ b/index.html
@@ -554,8 +554,12 @@
             </div>
             <div class="col-sm-6">
               <div class="download pull-right">
-                <div class="download-btn"></div>
-                <a href="#" class="download-link">Загрузить фото/логотип</a>
+                <!-- <div class="download-btn"></div> -->
+                <!-- <a href="#" class="download-link">Загрузить фото/логотип</a> -->
+                <input type="file" name="file-5[]" id="file-5" class="inputfile inputfile-4" data-multiple-caption="{count} files selected" multiple />
+                <label for="file-5"><figure>
+                  <div class="download-btn"></div>
+                </figure> <span>Загрузить фото логотип</span></label>
               </div>
             </div>
           </div>
